--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,11 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" href="style.css"/>
+		<title>first</title>
+	</head>
+	<body>
+		<div class="header"></div>
+		<div class="body"></div>
+		<div class="footer"></div>
+	</body>
